--- a/Dom/index.html
+++ b/Dom/index.html
@@ -20,9 +20,11 @@
     <div class="circle"></div>
     <div class="circle"></div>
 
-    <div class="heart"></div>
-    <div class="heart"></div>
-    <div class="heart"></div>
+    <div class="wrapper">
+        <div class="heart"></div>
+        <div class="heart"></div>
+        <div class="heart"></div>
+    </div>
 
     <script src="script.js"></script>
 
