--- a/TS/TS Complete Guide/Disign patterns/Maps/index.html
+++ b/TS/TS Complete Guide/Disign patterns/Maps/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8" />
     <title>Title</title>
-</head>
-<body>
+  </head>
+  <body>
+    <div id="map" style="height: 100%"></div>
     <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBNLrJhOMz6idD05pzfn5lhA-TAw-mAZCU"></script>
     <scrip src="./rc/index.ts"></scrip>
-</body>
+  </body>
 </html>
